--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -11,7 +11,7 @@ commands:
   usage: /ePay [joueur] [montant]
  moreMoney:
   description: donne de l'argent
-  usage: /moreMoney [joueur] [somme]
+  usage: /moreMoney [somme] [joueur]
   permission: permission.moreMoney 
 permission:
  plugin.moreMoney:
