--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -6,6 +6,8 @@ version: 0.0.1
 commands:
  monCompte:
   description: Mon argent !
+ showprime:
+  description: Les primes !
  ePay:
   description: je te donne
   usage: /ePay [joueur] [montant]
